# frickin-flutter

./: .flutter-plugins-dependencies  .gitignore  CONTRIBUTING.md  README.md  pubspec.yaml
android/: settings.gradle.kts
backend/: __init__.py  app.py  forms.py  models.py  requirements.txt  run.sh  utils.py
backend/recipe_posts/: routes.py
backend/users/: routes.py
cooking_app/: .flutter-plugins-dependencies  pubspec.yaml
cooking_app/lib/: main.dart
cooking_app/lib/auth/: auth.dart  gate.dart
cooking_app/lib/pages/: login.dart  prof.dart  reg.dart
frontend/: .gitignore  pubspec.yaml
frontend/android/: local.properties
frontend/cooking_app/android/: local.properties
frontend/integration_test/: simple_test.dart
frontend/ios/Flutter/: Generated.xcconfig  flutter_export_environment.sh
frontend/lib/: main.dart
frontend/lib/auth/: auth.dart  gate.dart
lib/: Cargo.toml  cargo.toml  main.dart
lib/auth/: auth.dart  gate.dart
lib/backend/: structs.rs
lib/backend/models/: post.rs  profile.rs  structs.rs  user.rs
lib/pages/: favorites.dart  home.dart  landing.dart  login.dart  navbar.dart  post.dart  prof.dart  reg.dart  reset.dart  search.dart
lib/pages/settings/: setmain.dart
lib/src/rust/: frb_generated.dart
lib/widgets/: main_scaffold_with_bottom_navbar.dart
rust/: Cargo.toml
rust/src/: cooking_app_server.rs  frb_generated.rs  lib.rs  main.rs
rust/src/api/: mod.rs  simple.rs
rust/src/db/: create.rs  mod.rs
rust/src/models/: post.rs  structs.rs  user.rs
rust/src/sup/: mod.rs  models.rs  notification.rs  post.rs  profile.rs  settings.rs  user.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/ios/: rust_lib_cooking_app.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_cooking_app.podspec
rust_builder/windows/: CMakeLists.txt
(+40 files in other folders)
