[package]
name = "cooking_app_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
mongodb = "2.8"
bson = "2.8"
serde = {version = "1.0", features = ["derive"]}
tokio = {version = "1", features = ["full"]}
dotenv = "0.15"
chrono = {version = "0.4", features = ["serde"]}
flutter_rust_bridge = "=2.10.0"

[lib]
crate-type = ["cdylib", "staticlib"]



[[bin]]
name = "cooking_app_server"
path = "backend"