[package]
name = "rust_lib_cooking_app"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
flutter_rust_bridge = "=2.10.0"
serde = { version = "1.0.219", features = ["derive"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
