[package]
name = "rust_lib_cooking_app"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow = "1.0.98"
chrono = { version = "0.4.41", features = ["serde"] }
dotenv = "0.15.0"
flutter_rust_bridge = "=2.10.0"
mongodb = "3.2.4"
serde = { version = "1.0.219", features = ["derive"] }
tokio = "1.46.1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }


